--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-2021/Day15/obj/Debug/net6.0/Day15.assets.cache
-2021/Day15/obj/Debug/net6.0/Day15.GeneratedMSBuildEditorConfig.editorconfig
-2021/Day16/obj/Debug/net6.0/Day16.assets.cache
-2021/Day16/obj/Debug/net6.0/Day16.GeneratedMSBuildEditorConfig.editorconfig
+*.cache
+*.editorconfig
