--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,26 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": ".NET Script Debug",
-            "type": "coreclr",
-            "request": "launch",
-            "program": "dotnet",
-            "args": [
-                "exec",
-                "C:/Users/elisk/.dotnet/tools/.store/dotnet-script/1.3.0/dotnet-script/1.3.0/tools/netcoreapp3.1/any/dotnet-script.dll",
-                "${file}"
-            ],
-            "cwd": "${workspaceRoot}",
-            "stopAtEntry": false
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python: Current File",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal",
+      "justMyCode": true
+    },
+    {
+      "name": ".NET Script Debug",
+      "type": "coreclr",
+      "request": "launch",
+      "program": "dotnet",
+      "args": [
+        "exec",
+        "C:/Users/elisk/.dotnet/tools/.store/dotnet-script/1.3.0/dotnet-script/1.3.0/tools/netcoreapp3.1/any/dotnet-script.dll",
+        "${file}"
+      ],
+      "cwd": "${workspaceRoot}",
+      "stopAtEntry": false
+    }
+  ]
 }
